--- a/js-crash-course.tex
+++ b/js-crash-course.tex
@@ -36,7 +36,7 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Objects}
+    \frametitle{Objects \& Primitives}
 
     \begin{itemize}[<+->]
         \item Everything is either a primitive or an object.
@@ -51,25 +51,115 @@
 \end{frame}
 
 \begin{frame}
+    \frametitle{Primitives: Types\footnotemark[1]}
+
+    JavaScript has six primitive types:
+
+    \begin{itemize}
+        \item Boolean
+        \item Null
+        \item Undefined (yes, this is a type)
+        \item Number (can be a number between $-(2^{53} - 1)$ and $2^{53} - 1$, \texttt{NaN},
+            \texttt{-Infinity}, or \texttt{Infinity}).
+        \item String (single or double quotes declares a string literal\footnotemark[2])
+        \item Symbol (new in ECMAScript 6)
+    \end{itemize}
+
+    \footnotetext[1]{Info on this slide from:
+    \url{https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures}}
+    \footnotetext[2]{Single quotes are recommended by Douglas Crockford because HTML normally uses
+        double quotes and to avoid conflicts when manipulating DOM objects, single quotes should be
+    used.}
+\end{frame}
+
+\begin{frame}
     \frametitle{Objects: Inheritance and the Prototype Chain}
 
     \begin{itemize}[<+->]
         \item Every JavaScript object is linked to a \textit{prototype}. Objects inherit the
             properties from their prototypes.
 
-        \item Object literals inherit from \texttt{Object.prototype} which is defined by the
+        \item "Empty" objects inherit from \texttt{Object.prototype} which is defined by the
             JavaScript language.
 
-        \item You can set the prototype of an object to another object by calling
+        \item You can set the prototype of an object to another object (or to \texttt{undefined}) by calling
             \texttt{myObj.prototype = otherObj;}
 
-        \item Since the prototype of an object is itself an object, the prototype will have a
-            prototype.
+        \item Since the prototype of an object is just another object, it too can have a
+            prototype. Hence the prototype \textit{chain}.
 
         \item The prototype relationship is a dynamic relationship. If a property is added to the
             prototype, it is automatically visible to all objects based on that prototype.
     \end{itemize}
 
+\end{frame}
+
+\begin{frame}[fragile]
+    \frametitle{Objects: Syntax}
+
+    \begin{minted}{javascript}
+    var myObj = { // this is an object literal
+        a: 3,
+        'b': 'JavaScript',
+        'is-awesome?': true,
+        doSomething: function () {
+            console.log(this.a); // 3
+            console.log(a); // error
+        }, // trailing commas are allowed
+    };
+    myObj.doSomething();
+    console.log(myObj.b, myObj['is-awesome?']);
+    \end{minted}
+
+    \textbf{Output:}
+    \begin{minted}{text}
+    3
+    error: a is undefined
+    JavaScript true
+    \end{minted}
+
+\end{frame}
+
+\begin{frame}[fragile]
+    \frametitle{Objects: Arrays}
+
+    JavaScript arrays are basically vectors (and are also objects, remember?).
+
+    \begin{minted}{javascript}
+    var arr = [1, 'a', {}, [], true];
+    arr[0] = 'not a number';
+    arr.push('this is basically a vector');
+    console.log(arr);
+    \end{minted}
+
+    \textbf{Output:}
+    \begin{minted}{text}
+    [ 'not a number', 'a', {}, [], true, 'this is basically a vector' ]
+    \end{minted}
+
+    \textit{Note that the elements of an array do not have to be the same type.}
+
+\end{frame}
+
+\begin{frame}
+    \frametitle{Variables}
+
+    JavaScript is an \textbf{untyped} language. I don't know what that means and I don't
+    think that Brendan did either when he wrote the language.\\
+
+    Variables are declared using the \texttt{var} keyword\footnotemark[1]. \\
+
+    \textbf{Examples:}
+
+    \begin{itemize}
+        \item \texttt{var name;} - creates variable \texttt{name} of type \texttt{undefined}.
+        \item \texttt{var name = `Sumner';} - string literal
+        \item \texttt{var age = 18;} - declaring a number literal
+        \item \texttt{var hasFriends = false;} - declaring a boolean
+        \item \texttt{var significantOther = null;}
+    \end{itemize}
+
+    \footnotetext[1]{Sometimes you don't need to use \texttt{var} as I have described above.}
 \end{frame}
 
 \begin{frame}
@@ -202,10 +292,9 @@
 \end{frame}
 
 \begin{frame}[fragile]
-    \frametitle{Functions: Closure}
+    \frametitle{Private Variables}
 
-    The fact that you can declare a function from within a function allows you to simulate private
-    variables.
+    You can simulate private variables the same way:
 
     \begin{minted}{javascript}
     var Dog = function(name) {
@@ -221,97 +310,6 @@
     console.log(myDog.name);    // logs 'Sebastian'
     console.log(myDog.isBoy()); // logs true
     \end{minted}
-\end{frame}
-
-\begin{frame}
-    \frametitle{Syntax: Types\footnotemark[1]}
-
-    JavaScript has six primitive types:
-
-    \begin{itemize}
-        \item Boolean
-        \item Null
-        \item Undefined (yes, this is a type)
-        \item Number (can be a number between $-(2^{53} - 1)$ and $2^{53} - 1$, \texttt{NaN},
-            \texttt{-Infinity}, or \texttt{Infinity}).
-        \item String (single or double quotes declares a string literal\footnotemark[2])
-        \item Symbol (new in ECMAScript 6)
-    \end{itemize}
-
-    \footnotetext[1]{Info on this slide from:
-    \url{https://developer.mozilla.org/en-US/docs/Web/JavaScript/Data_structures}}
-    \footnotetext[2]{Single quotes are recommended by Douglas Crockford because HTML normally uses
-        double quotes and to avoid conflicts when manipulating DOM objects, single quotes should be
-    used.}
-\end{frame}
-
-\begin{frame}
-    \frametitle{Syntax: Variables}
-
-    JavaScript is an \textbf{untyped} language. I don't know what that means and I don't
-    think that Brendan did either when he wrote the language.\\
-
-    Variables are declared using the \texttt{var} keyword\footnotemark[1]. \\
-
-    \textbf{Examples:}
-
-    \begin{itemize}
-        \item \texttt{var name;} - creates variable \texttt{name} of type \texttt{undefined}.
-        \item \texttt{var name = `Sumner';} - string literal
-        \item \texttt{var age = 18;} - declaring a number literal
-        \item \texttt{var hasFriends = false;} - declaring a boolean
-        \item \texttt{var significantOther = null;}
-    \end{itemize}
-
-    \footnotetext[1]{Sometimes you don't need to use \texttt{var} as I have described above.}
-\end{frame}
-
-\begin{frame}[fragile]
-    \frametitle{Syntax: Arrays}
-
-    JavaScript arrays are basically vectors.
-
-    \begin{minted}{javascript}
-    var arr = [1, 'a', {}, [], true];
-    arr[0] = 'not a number';
-    arr.push('this is basically a vector');
-    console.log(arr);
-    \end{minted}
-
-    \textbf{Output:}
-    \begin{minted}{text}
-    [ 'not a number', 'a', {}, [], true, 'this is basically a vector' ]
-    \end{minted}
-
-    \textit{Note that the elements of an array do not have to be the same type.}
-
-\end{frame}
-
-
-\begin{frame}[fragile]
-    \frametitle{Syntax: Objects}
-
-    \begin{minted}{javascript}
-    var myObj = { // this is an object literal
-        a: 3,
-        'b': 'JavaScript',
-        'is-awesome?': true,
-        doSomething: function () {
-            console.log(this.a); // 3
-            console.log(a); // error
-        }, // trailing commas are allowed
-    };
-    myObj.doSomething();
-    console.log(myObj.b, myObj['is-awesome?']);
-    \end{minted}
-
-    \textbf{Output:}
-    \begin{minted}{text}
-    3
-    error: a is undefined
-    JavaScript true
-    \end{minted}
-
 \end{frame}
 
 \begin{frame}[fragile]
