Fixed some formatting; Added some words to the Libraries slide

--- a/js-crash-course.tex
+++ b/js-crash-course.tex
@@ -4,7 +4,6 @@
 \usepackage{listings}
 \usepackage{minted}
 
-\MakeOuterQuote{"}
 \setbeamerfont{footnote}{size=\Tiny}
 \lstset{
     basicstyle=\small,
@@ -385,6 +384,9 @@
     (\url{http://jquery.com/}). It has good documentation and is really good for DOM
     manipulation.\\
 
+    Basically, if you want to do anything in JavaScript, somebody else has probably also wanted to
+    do that and have created a library for it. Google is your friend.
+
     % TODO: Sam fill in details on other libraries
 \end{frame}
 
@@ -414,7 +416,7 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Canvas Manipulation}
+    \frametitle{Canvas}
 
     Live Demo from Sam
 \end{frame}
