Added links to resources

--- a/js-crash-course.tex
+++ b/js-crash-course.tex
@@ -422,7 +422,7 @@
         &&& \checkmark Three.js (3D Graphics if you can't Opengl the things)
         &&& BabylonJS (Looks pretty I guess)
         & WebSockets (TCP, multiplayer, experimental, good luck)
-        && Sockets.io (talk to your Node.JS server?)
+        && Socket.io (talk to your Node.JS server?)
         & Audio Stuff
         && SoundJS (Again, never used)
         && Google (you are smart, figure it out)
