Fixed footnote size

--- a/js-crash-course.tex
+++ b/js-crash-course.tex
@@ -7,7 +7,7 @@
 \usepackage[ampersand]{easylist}
 \usepackage{amssymb}
 
-\setbeamerfont{footnote}{size=\Tiny}
+\setbeamerfont{footnote}{size=\tiny}
 \lstset{
     basicstyle=\small,
     breaklines=true
